# rtr23-luthadel-submission

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  MESH.mesh  README.md  build.sh  builtin.shadowmap_sampling_shader.frag.spv  compile_shaders.py  compile_shaders.sh  copy_assets.sh  debug.sh  run.sh
assets/materials/: cobblestone.mat  falc_wreck.mat  test_material.mat  test_ui_material.mat  viking_room.mat
assets/models/: falcon.mesh  falcon.mtl  viking_room.mesh
assets/shaders/: builtin.material_shader.frag.spv  builtin.material_shader.shadercfg  builtin.material_shader.vert.spv  builtin.ui_shader.frag.spv  builtin.ui_shader.vert.spv
include/: app_temp.hpp  pipeline.hpp  test_app.hpp  window.hpp
include/app/: app_temp.hpp  path.hpp
include/common/: defines.hpp  delegate.hpp  error_types.hpp  event.hpp  global_macro_list.hpp  logger.hpp  math_libs.hpp  outcome.hpp  property.hpp  random.hpp  result.hpp  string.hpp  timer.hpp
include/component/: axis_aligned_bbox.hpp  bounding_box.hpp  frustum.hpp  ray.hpp  transform.hpp
include/containers/: forward_list.hpp  list.hpp  map.hpp  set.hpp  unordered_map.hpp  vector.hpp
include/multithreading/: parallel.hpp
include/platform/: platform.hpp
include/renderer/: camera.hpp  render_pass.hpp  render_target.hpp  renderer.hpp  renderer_backend.hpp  renderer_types.hpp
include/resources/: datapack.hpp  geometry.hpp  geometry_config.hpp  image.hpp  material.hpp  mesh.hpp  model.hpp  resource.hpp  shader.hpp  skybox.hpp  texture.hpp
include/serialization/: binary_serializer.hpp  serializable.hpp  serializer.hpp
include/systems/: app_temp.hpp  camera_system.hpp  file_system.hpp  geometry_system.hpp  light_system.hpp  material_system.hpp  render_module_system.hpp  render_view_system.hpp  resource_system.hpp  shader_system.hpp  texture_system.hpp
include/utils/: defines.hpp  delegate.hpp  error_types.hpp  event.hpp  file_system.hpp  forward_list.hpp  global_macro_list.hpp  list.hpp  logger.hpp  map.hpp  math_libs.hpp  memory_system.hpp  platform.hpp  property.hpp  result.hpp  set.hpp  string.hpp  unordered_map.hpp  vector.hpp
src/: main.cpp  pipeline.cpp  window.cpp
src/app/: app_temp.cpp  path.cpp
src/common/: file_system.cpp  logger.cpp  math_libs.cpp  random.cpp  string.cpp  timer.cpp
src/component/: axis_aligned_bbox.cpp  frustum.cpp  transform.cpp
src/multithreading/: parallel.cpp
src/platform/: platform.cpp  platform_linux.cpp  platform_windows32.cpp
src/renderer/: camera.cpp  render_pass.cpp  (+2 more)
(+217 files in other folders)
